roles/envoy-https/templates/envoy1.yaml
static_resources:
    listeners:
      - name: ssh_22001
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 22001
        filter_chains:
          - filters:
              - name: envoy.filters.network.tcp_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                  stat_prefix: destination
                  cluster: cluster_22001
      - name: https
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 443
        filter_chains:
          - filters:
            - name: envoy.http_connection_manager
                config:
                  codec_type: auto
                  stat_prefix: ingress_http
                  route_config:
                    name: local_route
                    virtual_hosts:
                    - name: cockpit
                      domains:
                      - "*"
                      routes:
                      - match:
                          prefix: "/"
                        route:
                          use_websocket: true
                          cluster: cockpit
            http_filters:
            - name: envoy.router
              config: {}
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                  tls_certificates:
                  - certificate_chain:
                      filename: "/etc/letsencrypt/live/envoy/fullchain.pem"
                    private_key:
                      filename: "/etc/letsencrypt/live/envoy/privkey.pem"

    clusters:
      - name: cluster_22001
        connect_timeout: 30s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: cluster_22001
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 100.100.0.2
                        port_value: 22

      - name: cockpit
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: cockpit
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: cockpit.dorgeln.cloud
                    port_value: 9090
